[tool.poetry]
name = "pirate-tools"
version = "0.0.2"
description = "CLI Utility for renaming/organizing media files that have been torrented and have inconsistent naming"
authors = ["Eric Crowley <eecmtf@gmail.com>"]
readme = "README.md"
packages = [{include = "pirate_tools"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
